# gettext-pseudolocale

./: README.md  bent.h  gettext-pseudolocale.c  meson.build
